@@ -1,3 +1,7 @@
+trunk
+=====
+* added argument 'threshnames' to mxFIMLObjective()
+
 Pre-Release 999.0.0-1527 (January 6, 2011)
 ==========================================
 * added mxErrorPool() function and R documentation.
